# pvr.wmc

./: CMakeLists.txt  generateversionedfile.cmake
debian/: changelog.in  control  rules
pvr.wmc/: addon.xml  changelog.txt
src/: DialogDeleteTimer.cpp  DialogRecordPref.cpp  Socket.cpp  client.cpp  client.h  clientversion.h  clientversion.h.in  pvr2wmc.cpp  pvr2wmc.h  utilities.cpp
